k8s/deployment/gateway/canary/gateway-svc-v1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-svc-v1
  namespace: demo
  labels:
    app: gateway-svc
spec:
  selector:
    matchLabels:
      app: gateway-svc
      version: v1
  replicas: 1
  template:
    metadata:
      labels:
        app: gateway-svc
        version: v1
    spec:
      containers:
        - env:
            - name: GATEWAY_SVC_PORT
              value: "3000"
          name: gateway-svc
          image: registry.gitlab.com/hoanganhnguyen1994/ui-management:gateway-svc-v1
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
