k8s/deployment/gateway/canary/gateway-svc-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-svc-v2
  labels:
    app: gateway-svc
    version: v2
spec:
  selector:
    matchLabels:
      app: gateway-svc
      version: v2
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: gateway-svc
        version: v2
    spec:
      containers:
        - env:
            - name: GATEWAY_SVC_PORT
              value: "3000"
            - name: INGREDIENT_SVC_URL
              value: ingredient-svc.demo.svc.cluster.local:80
            - name: RECIPE_SVC_URL
              value: recipe-svc.demo.svc.cluster.local:80
          name: gateway-svc
          image: registry.gitlab.com/hoanganhnguyen1994/ui-management:gateway-svc-v2
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
