k8s/deployment/gateway/canary/gateway-svc-v2-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-svc-v2
  namespace: demo
  labels:
    app: gateway-svc
spec:
  type: ClusterIP
  selector:
    app: gateway-svc
    version: v2
  ports:
    - protocol: TCP
      name: http
      port: 3000
      targetPort: 3000
