k8s/deployment/gateway/canary/canary.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-svc
  namespace: demo
spec:
  hosts:
    - simple.ui
  http:
    - route:
        - destination:
            host: gateway-svc.demo.svc.cluster.local
            subset: v1
          weight: 10
        - destination:
            host: gateway-svc.demo.svc.cluster.local
            subset: v2
          weight: 90
