k8s/deployment/gateway/canary/destination-rule-all-mtls.yaml
#apiVersion: networking.istio.io/v1alpha3
#kind: DestinationRule
#metadata:
#  name: gateway-svc
#spec:
#  host: gateway-svc
#  trafficPolicy:
#    tls:
#      mode: ISTIO_MUTUAL
#  subsets:
#    - name: v1
#      labels:
#        version: v1
#    - name: v2
#      labels:
#        version: v2
#


apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: gateway-svc
spec:
  host: gateway-svc.demo.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
